minimize css/js

--- a/page/templates/index.html
+++ b/page/templates/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>File Drop</title>
+    <!-- build:css static/css/all.css -->
     <link href="/static/css/bootstrap.css" rel="stylesheet">
-{#    <link href="/static/css/bootstrap-theme.css" rel="stylesheet">#}
+    <!--link href="/static/css/bootstrap-theme.css" rel="stylesheet"-->
     <link href="/static/css/main.css" rel="stylesheet">
+    <!-- endbuild -->
 </head>
 <body>
     <form id="upload-box" style="display: none">
@@ -22,10 +24,12 @@
     </form>
     <div class="drag-drop-msg">Drop Here!</div>
 
+<!-- build:js static/js/all.js -->
 <script src="/static/js/jquery-1.11.2.js"></script>
 <script src="/static/js/jquery-ui.widget.js"></script>
 <script src="/static/js/jquery.iframe-transport.js"></script>
 <script src="/static/js/jquery.fileupload.js"></script>
 <script src="/static/js/home.js"></script>
+<!-- endbuild -->
 </body>
 </html>
