--- a/page/static/css/main.css
+++ b/page/static/css/main.css
@@ -85,3 +85,11 @@ body > h2 {
 #deadline.negative{
     color: #f00;
 }
+
+
+.notif {
+    position: fixed;
+    top: 3%;
+    width: 60%;
+    left: 20%;
+}
