Fix small things about input

--- a/page/templates/index.html
+++ b/page/templates/index.html
@@ -18,7 +18,7 @@
         <div class="r"><input type="text" name="student_no" placeholder="Student no."></div>
         <div class="r"><input type="email" name="email" placeholder="Email"></div>
         <div class="r"><div class="file-input-overlay">
-            <input type="file">
+            <input type="file" tabindex="-1">
             <button class="btn btn-sm btn-default">Choose File</button>
             <span class="filename"></span>
         </div></div>
