--- a/page/static/css/main.css
+++ b/page/static/css/main.css
@@ -62,6 +62,9 @@ body > h2 {
     opacity: 0.0;
     filter: alpha(opacity=0);
     font-size: 50px;
+    left: 0;
+    width: 100%;
+    bottom: 0;
 }
 .file-input-overlay button{
     margin-bottom: 0;
