--- a/page/templates/index.html
+++ b/page/templates/index.html
@@ -18,8 +18,8 @@
         <div class="r"><input type="text" name="student_no" placeholder="Student no."></div>
         <div class="r"><input type="email" name="email" placeholder="Email"></div>
         <div class="r"><div class="file-input-overlay">
-            <input type="file" tabindex="-1">
-            <button class="btn btn-sm btn-default">Choose File</button>
+            <input type="file">
+            <button class="btn btn-sm btn-default" tabindex="-1">Choose File</button>
             <span class="filename"></span>
         </div></div>
         <input class="btn btn-primary go" type="submit" value="Go!">
