--- a/page/templates/index.html
+++ b/page/templates/index.html
@@ -34,6 +34,7 @@
             <li>Multiple submits for one student are preserved.</li>
             <li>Don't postpone sending your assignment till last minutes!</li>
             <li>You could drag'n drop files here too.</li>
+            <li>Delayed submits are allowed with maximum of 3 days. Each day has a penalty of 15%. It will increase linearly everyday.</li>
         </ul></div>
     </div>
 </div></div>
